--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.12",
-    "@react-navigation/native-stack": "^6.9.20",
+    "@react-navigation/native": "6.1.12",
+    "@react-navigation/native-stack": "6.9.20",
+    "@shopify/react-native-skia": "0.1.241",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-safe-area-context": "4.9.0",
+    "react-native-screens": "3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +29,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
