--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,42 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "src/*": [
+        "./src/*"
+      ],
+      "assets/*": [
+        "./src/assets/*"
+      ],
+      "modules/*": [
+        "./src/modules/*"
+      ],
+      "components/*": [
+        "./src/components/*"
+      ],
+      "constants/*": [
+        "./src/constants/*"
+      ],
+      "helpers/*": [
+        "./src/helpers/*"
+      ],
+      "hooks/*": [
+        "./src/hooks/*"
+      ],
+      "routes/*": [
+        "./src/routes/*"
+      ],
+      "screens/*": [
+        "./src/screens/*"
+      ],
+      "theme/*": [
+        "./src/theme/*"
+      ],
+      "utils/*": [
+        "./src/utils/*"
+      ],
+    }
+  }
 }
